2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	Update to URBI_DIRS.

	* configure.ac (NETWORK_BSDNET): No longer define it.
	* parser/bison/Makefile.defs: Rename as...
	* parser/bison/bison.mk: this.
	And adjust dir names.
	* network/bsdnet/Makefile.defs: Rename as...
	* network/bsdnet/bsdnet.mk: this.
	And adjust dir names.
	* network/OPENR/Makefile.defs: Rename as...
	* network/OPENR/openr.mk: this.
	And adjust dir names.
	* build-aux/urbi-dirs.m4: Also define kernelincludedir.
	* build-aux/urbi-openr.m4: Formatting changes.
	* README: New.
	* Makefile.am: .

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	Introduce ubanner.cc.
	* ubanner.hh, ubanner.cc: New.
	* userver.cc, userver.h: Use it.
	(UServer::display (const char **)): New.
	Use it.
	* Makefile.am: Adjust.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	Update URBI_DIRS.
	* build-aux/urbi-dirs.m4: Update from liburbi-cpp.
	* configure.ac: Use it.
	* Makefile.am (AM_CPPFLAGS): Remove useless ones, add missing ones.
	Ship uext.h.

2006-09-26  Type Your Name Here  <your.mail.here@fixme.com>

	Include path fix

	* utypes.h: Fix uobject.h include path, add uext.h include.
	* uvalue.cc: idem.
	* userver.cc: idem.
	* uobject/uext.h: New. Symlink from liburbi.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* uobject/uobject.cc: Add missing std::.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* uobject/uobject.cc (cleanTable): Cleanup.
	* Makefile.am: Formatting changes.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* build-aux/urbi-openr.m4: New.
	* configure.ac: Use it.

2006-09-26  Akim Demaille  <akim@lrde.epita.fr>

	* parser/bison/Makefile.defs: Install the header files.
	* network/bsdnet/Makefile.defs,
	* network/OPENR/Makefile.defs,
	* network/OPENR/Makefile.defs,
	* Makefile.am: Ditto.

	* userver.h: Reorder includes.
	* memorymanager/memorymanager.h: Formatting changes.

2006-09-26  Akim Demaille  <akim.demaille@free.fr>

	namespace cleanups.