@@ -1,3 +1,10 @@
+2006-09-26  Akim Demaille  <akim.demaille@free.fr>
+
+	<%= Title %>
+
+	* userver.h: .
+	* uconnection.cc: .
+
 2006-09-26  Akim Demaille  <akim@lrde.epita.fr>
 
 	Update to URBI_DIRS.
